syntax = "proto3";

package message.pb;

message Message {

    enum Type {
      TEXT = 0;
      AUDIO = 1;
      VIDEO = 2;
    }
  
    string id = 1;

    string group_id = 2;

    bytes peer_id = 3;

    string peer_name = 4;

    string peer_avatar = 5;
  
    Type type = 6;
  
    bytes payload = 7;
  
    int64 timestamp = 8;
  
    uint64 lamportime = 9;
  
    bytes signature = 10;
}